# KikoPlayApp

./: README.md  reference.md
api/: kiko.md  net.md  ui.md
app/ai_sub/: README.md  app.json  app.lua  app.xml  models.md  recognizer.lua  style.qss  translator.lua
app/ai_sub/vad/: CMakeLists.txt  cmdline.h  silero-vad-onnx.cpp  wav.h
app/app_example/: app.json  app.lua  app.xml  style.qss
app/app_example/pages/: page_interaction.lua  page_interaction.xml  page_network.lua  page_network.xml  page_widgets.lua  page_widgets.xml
app/bgm_collection/: app.json  app.lua  app.xml  bgm_api.lua  style.qss
app/eye_care/: app.json  app.lua  app.xml
app/music_player/: README.md  app.json  app.lua  app.xml  style.qss
app/scritp_updater/: app.json  app.lua  app.xml  style.qss  updater.lua
app/sub_search/: app.json  app.lua  app.xml  download_list.lua  style.qss
app/sub_search/pages/: page_search.lua  page_search.xml
app/sub_search/srcs/: a4k.lua  zimuku.lua
app/tv_live/: app.json  app.lua  app.xml  style.qss
app/tv_live/srcs/: lanjing.lua  m3u_src.lua
app/ytdlp_download/: app.json  app.lua  app.xml  yt_dlp.lua
